--- a/src/App.css
+++ b/src/App.css
@@ -26,8 +26,6 @@ h3, h4 {
 nav {
   border-bottom: 4px solid black;
   text-align: center;
-  position: fixed;
-  top: 0;
   width: 100%;
   background: white;
 }
@@ -51,6 +49,30 @@ nav a {
   padding: 24px 32px;
 }
 
+@media (max-width: 500px) {
+  nav ul { 
+    text-align: left;
+  }
+
+  nav li {
+    display: block;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    background-color: #efefef;
+  }
+
+  nav a {
+    text-decoration: none;
+    padding: 10px 20px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: left;
+    align-items: left;
+  }
+
+}
+
 nav a:hover {
   background: black;
   color: white;
@@ -59,7 +81,8 @@ nav a:hover {
 #page-body {
   max-width: 700px;
   margin: auto;
-  padding-top: 72px;
+  margin-top: 10px;
+  padding: 10px 10px 10px 10px;
 }
 
 .article-list-item {
@@ -103,7 +126,7 @@ input, textarea {
   width: 320px;
 }
 
-#upvotes-section button, p {
+#upvotes-section button {
   display: inline-block;
   margin-right: 16px;
 }
@@ -111,10 +134,4 @@ input, textarea {
 .comment {
   border-bottom: 2px solid black;
   padding: 16px;
-}
-
-.nav-right {
-  position: absolute;
-  top: 8px;
-  right: 8px;
 }
